--- a/Mail-IMAPClient-3.05/META.yml
+++ b/Mail-IMAPClient-3.05/META.yml
@@ -1,9 +1,10 @@
 --- #YAML:1.0
 name:                Mail-IMAPClient
-version:             3.00
+version:             3.05
 abstract:            IMAP4 client library
 license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.36_01
+author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.42
 distribution_type:   module
 requires:     
     Carp:                          0
@@ -21,5 +22,5 @@ requires:
     Test::More:                    0
     Test::Pod:                     0
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
