--- a/W/Mail-IMAPClient-3.33/META.yml
+++ b/W/Mail-IMAPClient-3.33/META.yml
@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name:               Mail-IMAPClient
-version:            3.32
+version:            3.33
 abstract:           IMAP4 client library
 author:
     - Phil Pearl (Lobbes) <phil@zimbra.com>
-license:            unknown
+license:            perl
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
@@ -24,6 +24,15 @@ requires:
     Parse::RecDescent:  1.94
     perl:               5.008
     Test::More:         0
+resources:
+    bugtracker:
+        mailto:  bug-Mail-IMAPClient@rt.cpan.org
+        web:     http://rt.cpan.org/Public/Dist/Display.html?Name=Mail-IMAPClient
+    homepage:  http://sourceforge.net/projects/mail-imapclient/
+    repository:
+        type:  git
+        url:   git://git.code.sf.net/p/mail-imapclient/git
+        web:   http://sourceforge.net/p/mail-imapclient/git/
 no_index:
     directory:
         - t
