--- a/W/ml_announce.in
+++ b/W/ml_announce.in
@@ -1,4 +1,4 @@
-m4_dnl $Id: ml_announce.in,v 1.6 2012/12/24 10:35:38 gilles Exp gilles $
+m4_dnl $Id: ml_announce.in,v 1.7 2014/05/30 01:39:23 gilles Exp gilles $
 m4_dnl
 m4_define(`M4_imapsync_VERSION',m4_esyscmd(cat VERSION|tr -d '\n'))m4_dnl
 m4_define(`M4_SECRET_PATH',m4_esyscmd(cat dist/path_last.txt|tr -d '\n'))m4_dnl
@@ -22,7 +22,7 @@ http://imapsync.lamiral.info/dist/M4_SECRET_PATH/
 Three files are there:
 - imapsync            is directly the perl script (also found in the tarball) for a fast upgrade.
 - imapsync-M4_imapsync_VERSION.tgz  is the tarball containing everything of the project (maybe too much)
-- imapsync.exe        is the win32 standalone binary.
+- imapsync.M4_imapsync_VERSION.zip  is the win32 zip archive including standalone binary imapsync.exe.
 
 What's new in this M4_imapsync_VERSION release can be found at
 http://imapsync.lamiral.info/#latest
