--- a/W/ml_announce.in
+++ b/W/ml_announce.in
@@ -1,4 +1,4 @@
-m4_dnl $Id: ml_announce.in,v 1.7 2014/05/30 01:39:23 gilles Exp gilles $
+m4_dnl $Id: ml_announce.in,v 1.8 2014/10/22 11:04:30 gilles Exp gilles $
 m4_dnl
 m4_define(`M4_imapsync_VERSION',m4_esyscmd(cat VERSION|tr -d '\n'))m4_dnl
 m4_define(`M4_SECRET_PATH',m4_esyscmd(cat dist/path_last.txt|tr -d '\n'))m4_dnl
@@ -18,6 +18,10 @@ You will find the latest imapsync.exe binary (release M4_imapsync_VERSION)
 and the latest imapsync source code (release M4_imapsync_VERSION) at the following link:
 
 http://imapsync.lamiral.info/dist/M4_SECRET_PATH/
+
+or also from this page 
+
+http://imapsync.lamiral.info/paypal_return.shtml 
 
 Three files are there:
 - imapsync            is directly the perl script (also found in the tarball) for a fast upgrade.
