--- a/W/ml_announce.in
+++ b/W/ml_announce.in
@@ -1,4 +1,4 @@
-m4_dnl $Id: ml_announce.in,v 1.8 2014/10/22 11:04:30 gilles Exp gilles $
+m4_dnl $Id: ml_announce.in,v 1.11 2015/04/01 12:29:55 gilles Exp gilles $
 m4_dnl
 m4_define(`M4_imapsync_VERSION',m4_esyscmd(cat VERSION|tr -d '\n'))m4_dnl
 m4_define(`M4_SECRET_PATH',m4_esyscmd(cat dist/path_last.txt|tr -d '\n'))m4_dnl
@@ -8,7 +8,7 @@ Bcc: gilles@lamiral.info
 Subject: [imapsync update] new imapsync release M4_imapsync_VERSION available
 To: imapsync_update@lists.lamiral.info
 
-Hello imapsync user,
+Dear imapsync user,
 
 You're subscribed to the newsletter announcing imapsync new releases
 (very few traffic) and the way to get them. Send me a note if you
@@ -17,19 +17,19 @@ don't want to receive those announces anymore.
 You will find the latest imapsync.exe binary (release M4_imapsync_VERSION)
 and the latest imapsync source code (release M4_imapsync_VERSION) at the following link:
 
-http://imapsync.lamiral.info/dist/M4_SECRET_PATH/
+  http://imapsync.lamiral.info/dist/M4_SECRET_PATH/
 
-or also from this page 
+or also more permanently from this page 
 
-http://imapsync.lamiral.info/paypal_return.shtml 
+  http://imapsync.lamiral.info/paypal_return.shtml 
 
-Three files are there:
-- imapsync            is directly the perl script (also found in the tarball) for a fast upgrade.
-- imapsync-M4_imapsync_VERSION.tgz  is the tarball containing everything of the project (maybe too much)
-- imapsync.M4_imapsync_VERSION.zip  is the win32 zip archive including standalone binary imapsync.exe.
+Three important files are there:
+* imapsync            is directly the perl script (also found in the tarball and zip) for a fast upgrade.
+* imapsync-M4_imapsync_VERSION.tgz  is the tarball containing everything of the project (maybe too much)
+* imapsync.M4_imapsync_VERSION.zip  is the win32 zip archive including standalone binary imapsync.exe.
 
 What's new in this M4_imapsync_VERSION release can be found at
-http://imapsync.lamiral.info/#latest
+http://imapsync.lamiral.info/S/news.shtml
 
 I thank you again for buying and using imapsync,
 I wish you successful imap transfers!
