--- a/INSTALL.d/Dockerfile
+++ b/INSTALL.d/Dockerfile
@@ -1,81 +1,72 @@
 ## Dockerfile for building a docker imapsync image
 
-# $Id: Dockerfile,v 1.28 2019/12/02 13:19:41 gilles Exp gilles $
+# $Id: Dockerfile,v 1.30 2020/03/26 07:15:04 gilles Exp gilles $
 # I use the following command to build the image:
 #
-#  docker build -t gilleslamiral/imapsync . 
+#  docker build -t gilleslamiral/imapsync .
 #
 # where this Dockerfile is in the current directory
-# 
+#
+# I thank you very much
 # I like thanks
 # I like stars
 # I also like (and need) money
-# I thank you very much
 
-# Number of imapsync images pulled so far (2019_12_02): 32732
+# Number of imapsync images pulled so far (2020_03_26): 84354
 # Command used:
 # curl -s https://hub.docker.com/v2/repositories/gilleslamiral/imapsync/ | jq '.pull_count'
 
+# Ubuntu latest points to current LTS release
 
-FROM debian:buster 
+FROM ubuntu:latest
 
 LABEL   maintainer="Gilles LAMIRAL <gilles@lamiral.info>" \
         description="Imapsync" \
         documentation="https://imapsync.lamiral.info/#doc"
 
-# Put a copy of the Dockerfile in the image itself
-# It can help future maintenance, isn't it?
-
-COPY Dockerfile /
-
-# Also put my local imapsync on /usr/bin/ for testing purpose
-# renamed imapsync_local since would be erased by the wget
-
-COPY imapsync /usr/bin/imapsync_local
-COPY prerequisites_imapsync /usr/bin/prerequisites_imapsync_local
-
-RUN set -xe && \
-  apt-get update \
-  && apt-get install -y \
-  libauthen-ntlm-perl \
-  libcgi-pm-perl \
-  libcrypt-openssl-rsa-perl \
-  libdata-uniqid-perl \
-  libencode-imaputf7-perl \
+RUN apt-get update && \
+  apt-get install -y \
+  libauthen-ntlm-perl     \
+  libclass-load-perl      \
+  libcrypt-ssleay-perl    \
+  libdata-uniqid-perl     \
+  libdigest-hmac-perl     \
+  libdist-checkconflicts-perl \
+  libencode-imaputf7-perl     \
   libfile-copy-recursive-perl \
-  libfile-tail-perl        \
-  libio-socket-ssl-perl \
+  libfile-tail-perl       \
+  libio-compress-perl     \
   libio-socket-inet6-perl \
-  libio-tee-perl \
-  libhtml-parser-perl \
-  libjson-webtoken-perl \
+  libio-socket-ssl-perl   \
+  libio-tee-perl          \
+  libjson-webtoken-perl   \
   libmail-imapclient-perl \
-  libparse-recdescent-perl \
   libmodule-scandeps-perl \
-  libpar-packer-perl \
-  libreadonly-perl \
-  libregexp-common-perl \
-  libsys-meminfo-perl \
-  libterm-readkey-perl \
+  libnet-dbus-perl        \
+  libnet-ssleay-perl      \
+  libpar-packer-perl      \
+  libreadonly-perl        \
+  libregexp-common-perl   \
+  libsys-meminfo-perl     \
+  libterm-readkey-perl    \
+  libtest-fatal-perl      \
+  libtest-mock-guard-perl \
   libtest-mockobject-perl \
-  libtest-pod-perl \
-  libunicode-string-perl \
-  liburi-perl  \
-  libwww-perl \
-  procps \
-  wget \
-  make \
-  cpanminus \
-  lsof \
-  && rm -rf /var/lib/apt/lists/*
+  libtest-pod-perl        \
+  libtest-requires-perl   \
+  libtest-simple-perl     \
+  libunicode-string-perl  \
+  liburi-perl             \
+  libtest-nowarnings-perl \
+  libtest-deep-perl       \
+  libtest-warn-perl       \
+  make                    \
+  cpanminus               \
+  wget
 
-RUN set -xe \
-  && pwd \
-  && wget -N https://imapsync.lamiral.info/imapsync \
-     https://imapsync.lamiral.info/prerequisites_imapsync \
-  && mv imapsync /usr/bin/imapsync \
-  && chmod +x /usr/bin/imapsync /usr/bin/imapsync_local # just_a_comment_to_force_update 2019_11_26_12_58_34
-
+RUN wget -N https://imapsync.lamiral.info/imapsync && \
+  mv imapsync /usr/bin/imapsync && \
+  chmod +x /usr/bin/imapsync
 
 USER nobody:nogroup
 
@@ -87,6 +78,5 @@ STOPSIGNAL SIGINT
 
 CMD ["/usr/bin/imapsync"]
 
-# 
-# End of imapsync Dockerfile 
-
+#
+# End of imapsync Dockerfile
