Add libcrypt-openssl-pkcs12-perl to Dockerfile
After merging #381 docker image started to crash when using google xoauth with:

Can't locate Crypt/OpenSSL/PKCS12.pm in @INC (you may need to install the Crypt::OpenSSL::PKCS12 module)

--- a/INSTALL.d/Dockerfile
+++ b/INSTALL.d/Dockerfile
@@ -50,6 +50,7 @@ RUN set -xe && \
   libauthen-ntlm-perl \
   libcgi-pm-perl \
   libcrypt-openssl-rsa-perl \
+  libcrypt-openssl-pkcs12-perl \
   libdata-uniqid-perl \
   libencode-imaputf7-perl \
   libfile-copy-recursive-perl \
